--- a/documentation.tex
+++ b/documentation.tex
@@ -2,6 +2,7 @@
 \usepackage[margin=1in, top=1in, bottom=1in]{geometry}
 \usepackage{amsmath,etoolbox}
 \usepackage{lipsum}
+\usepackage{fancyhdr}
 
 %\usepackage{libertine}  % For times new roman equivalent linux
 %\usepackage[T1]{fontenc}
@@ -53,6 +54,12 @@ $% Title of the Project
   \today
 }
 
+\pagestyle{fancy}
+\fancyhf{}
+\chead{\teamleaderfirst, et al.}
+\rfoot{\thepage}
+\lfoot{\today}
+
 % Beginning document
 \begin{document}
 
@@ -63,14 +70,17 @@ $% Title of the Project
   \addcontentsline{toc}{section}{\protect\numberline{}Title Pages}% Add title to ToC
 
   % Page 1
+  \thispagestyle{plain}
   \titleone{}
   \clearpage
   % Page 2
+  \thispagestyle{plain}
   \titletwo{}
   \newpage
 
   % Left aligned text throughout
   \raggedright
+  \thispagestyle{plain}
 
   % Generate ToC and add ToC to ToC
   {
