--- a/documentation.tex
+++ b/documentation.tex
@@ -9,8 +9,7 @@
 
 \renewcommand{\contentsname}{Table of Contents}  % Contents will be called Table of Commands
 
-$% Title of the Project
-\newcommand{\projecttitle}{Ecobot}
+\newcommand{\projecttitle}{Ecobot}  % Title of the project
 
 \newcommand{\teamleaderfirst}{Lakshay}
 \newcommand{\teamleaderlast}{Garg}
